plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'org.fluxbox'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
	implementation 'org.jgrapht:jgrapht-core:1.5.2'
	implementation 'org.apache.commons:commons-math3:3.6.1'

	implementation 'io.projectreactor:reactor-core:3.4.14'
	implementation 'io.projectreactor:reactor-test:3.4.14'
	implementation 'org.jgrapht:jgrapht-io:1.5.2'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework:spring-webflux'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation('org.mockito:mockito-all:1.10.19')

}

tasks.named('test') {
	useJUnitPlatform()
}
